--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -30,8 +30,12 @@
     </header>
     <main>
       <section>
-        <img src="images/UXBH4769.png" alt="松井理恵の全体写真" width=240px"
-        height="320px"
+        <img
+          src="images/UXBH4769.png"
+          alt="松井理恵の全体写真"
+          width="240px"
+          height="320px"
+        />
       </section>
       <h1 class="mincho">Profile</h1>
       <font size="4"><h5 class="mincho">松井理恵　Rie Matsui</h5></font>
