--- a/index.html
+++ b/index.html
@@ -1,35 +1,57 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>Pianist　松井理恵　Official website</title>
-        <link rel="stylesheet" href="css/style.css">
-        <meta name="description" content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="description" content="ピアノ,ピアノレッスン,ピアノ教室,ソルフェージュ,ソルフェージュ教室,ソルフェージュレッスン,松井理恵,ピアニスト,楽典,音楽理論,オンラインレッスン,板橋区役所前,松本市,リトミック">
-        <!-- jqueryの読み込み -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    </head>
-    <body>
-        <!-- headerにidを付与 -->
-        <header id="header"></header>
-        <div id="header-container" w3-include-html="header.html"></div>
-        <main>
-            <section>
-                <img src="images/IMG_2947.JPG" alt="松井理恵がピアノを弾いている様子の写真" width="412px" height="275px">
-            </section>
-            <h2 class="mincho">News</h1>
-                <p>2023.8.20　12月3日に、子どものレッスン生たちによるクリスマスコンサートを開催します。</p>
-                <p>2023.7.29　新ホームページ開設しました。</p>
-            <h1 class="mincho">Rie Matsui</p>
-            <h1 class="mincho">Official website</p>
-        </main>
-        <!-- ヘッダーを共通処理として呼び出す -->
-        <script>
-            $(function () {
-            $("#header").load("common/header.html");
-            });
-        </script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Pianist　松井理恵　Official website</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta
+      name="description"
+      content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta
+      name="description"
+      content="ピアノ,ピアノレッスン,ピアノ教室,ソルフェージュ,ソルフェージュ教室,ソルフェージュレッスン,松井理恵,ピアニスト,楽典,音楽理論,オンラインレッスン,板橋区役所前,松本市,リトミック"
+    />
+    <!-- jqueryの読み込み -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  </head>
+  <body>
+    <!-- headerにidを付与 -->
+    <header id="header"></header>
+    <main>
+      <div class="flex topConteiner flex column">
+        <div class="flex">
+          <div class="topImageContainer">
+            <img
+              src="images/IMG_2947.JPG"
+              alt="松井理恵がピアノを弾いている様子の写真"
+              width="412"
+              height="275"
+            />
+          </div>
+          <div class="boldFontStyle mincho itemsBottom flex column">
+            <span class="textLeft">
+              <p class="topTitleRow">Rie Matsui</p>
+              <p class="topTitleRow">Official website</p>
+            </span>
+          </div>
+        </div>
+        <div class="topNewsContainer">
+          <h2 class="mincho boldFontStyle">News</h2>
+          <p class="topNewsRow">
+            2023.8.20　12月3日に、子どものレッスン生たちによるクリスマスコンサートを開催します。
+          </p>
+          <p class="topNewsRow">2023.7.29　新ホームページ開設しました。</p>
+        </div>
+      </div>
+    </main>
+    <!-- ヘッダーを共通処理として呼び出す -->
+    <script>
+      $(function () {
+        $("#header").load("common/header.html");
+      });
+    </script>
+  </body>
 </html>
