--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>Pianist　松井理恵 Official website</title>
+    <title>Pianist　松井理恵 Official website | Profile</title>
     <meta
       name="description"
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
@@ -13,44 +13,52 @@
       name="description"
       content="ピアノ,ピアノレッスン,ピアノ教室,ソルフェージュ,ソルフェージュ教室,ソルフェージュレッスン,松井理恵,ピアニスト,楽典,音楽理論,オンラインレッスン,板橋区役所前,松本市,リトミック"
     />
+    <!-- jqueryの読み込み -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </head>
   <body>
-    <header>
-      <nav class="globalnav">
-        <ul>
-          <li class="navitem"><a href="../index.html">ホーム</a></li>
-          <li class="navitem"><a href="Profile.html">プロフィール</a></li>
-          <li class="navitem">
-            <a href="../concert/concert.html">コンサート</a>
-          </li>
-          <li class="navitem"><a href="../lesson/lesson.html">レッスン</a></li>
-          <li class="navitem"><a href="../sns/sns.html">snsリンク</a></li>
-        </ul>
-      </nav>
-    </header>
+    <!-- headerにidを付与 -->
+    <header id="header"></header>
     <main>
-      <section>
-        <img
-          src="images/UXBH4769.png"
-          alt="松井理恵の全体写真"
-          width="240px"
-          height="320px"
-        />
-      </section>
-      <h1 class="mincho">Profile</h1>
-      <font size="4"><h5 class="mincho">松井理恵　Rie Matsui</h5></font>
-      <div class="fontsize">
-        <font size="3"
-          ><p class="mincho">
-            <br />
-            ピアニスト。<br />長野県出身。東京音楽大学ピアノ科卒業、同大学院ソルフェージュ科修了。<br />声楽、器楽の伴奏、合唱・オペラにおける稽古ピアニスト、コレペティトール、室内楽・オーケストラ内での鍵盤楽器奏者として演奏活動を行うほか、編曲、レクチャーコンサートの企画・主催、またピアノ、ソルフェージュ、音楽理論講師として後進の指導にあたるなど多分野で活動している。<br />
-            近年ではピアノソロにも力を入れており、2016年、2018年に松本市で、2022年に東京でソロリサイタル開催。
-          </p></font
-        >
+      <div class="profileContainer">
+        <div class="flex">
+          <div class="profileImageContainer">
+            <img
+              src="images/UXBH4769.png"
+              alt="松井理恵の全体写真"
+              width="240px"
+              height="320px"
+            />
+          </div>
+          <div class="flex itemsCenter">
+            <h1 class="mincho boldFontStyle">Profile</h1>
+          </div>
+        </div>
+        <div>
+          <p class="mincho profileNameFont">松井理恵　Rie Matsui</p>
+          <div class="profileDetailContainer">
+            <p class="mincho profileDetailFont">
+              ピアニスト。
+              <br />
+              長野県出身。東京音楽大学ピアノ科卒業、同大学院ソルフェージュ科修了。
+              <br />
+              声楽、器楽の伴奏、合唱・オペラにおける稽古ピアニスト、コレペティトール、室内楽・オーケストラ内での鍵盤楽器奏者として演奏活動を行うほか、編曲、レクチャーコンサートの企画・主催、またピアノ、ソルフェージュ、音楽理論講師として後進の指導にあたるなど多分野で活動している。
+              <br />
+              近年ではピアノソロにも力を入れており、2016年、2018年に松本市で、2022年に東京でソロリサイタル開催。
+            </p>
+          </div>
+        </div>
+        <p class="mincho profileSnsLink">
+          <a href="../sns/sns.html">snsリンクはこちら</a>
+        </p>
       </div>
-      <p class="mincho">
-        <br />snsリンクは<a href="../sns/sns.html">こちら</a>
-      </p>
     </main>
+
+    <!-- ヘッダーを共通処理として呼び出す -->
+    <script>
+      $(function () {
+        $("#header").load("../common/header.html");
+      });
+    </script>
   </body>
 </html>
