--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -24,7 +24,7 @@
         <div class="flex">
           <div class="profileImageContainer">
             <img
-              src="images/UXBH4769.png"
+              src="../images/matsuiProfile.png"
               alt="松井理恵の全体写真"
               width="240px"
               height="320px"
@@ -49,7 +49,7 @@
           </div>
         </div>
         <p class="mincho profileSnsLink">
-          <a href="../sns/sns.html">snsリンクはこちら</a>
+          <a href="../sns/sns.html" class="customLink">snsリンクはこちら</a>
         </p>
       </div>
     </main>
