--- a/common/header.html
+++ b/common/header.html
@@ -14,7 +14,7 @@
         <a href="../lesson/lesson.html">レッスン</a>
       </li>
       <li class="navitem">
-        <a href="sns.html">snsリンク</a>
+        <a href="../sns/sns.html">snsリンク</a>
       </li>
     </ul>
   </nav>
