--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="flex">
           <div class="topImageContainer">
             <img
-              src="images/IMG_2947.JPG"
+              src="images/matsuiPlrayPiano.JPG"
               alt="松井理恵がピアノを弾いている様子の写真"
               width="412"
               height="275"
