--- a/sns/sns.html
+++ b/sns/sns.html
@@ -2,61 +2,68 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>Pianist　松井理恵　Official website</title>
+    <title>Pianist　松井理恵　Official website | SNS</title>
     <meta
       name="description"
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <meta name="viewport" content="width=device-wedth,initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="format-detection" content="telephone=no" />
-    <meta name="description"
-    content="ピアノ,ピアノレッスン,ピアノ教室,ソルフェージュ,ソルフェージュ教室,ソルフェージュレッスン,松井理恵,ピアニスト,楽典,音楽理論,オンラインレッスン,板橋区役所前,松本市,リトミック"">
+    <meta
+      name="description"
+      content="ピアノ,ピアノレッスン,ピアノ教室,ソルフェージュ,ソルフェージュ教室,ソルフェージュレッスン,松井理恵,ピアニスト,楽典,音楽理論,オンラインレッスン,板橋区役所前,松本市,リトミック"
+    />
+    <!-- jqueryの読み込み -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </head>
   <body>
-    <header>
-      <nav class="globalnav">
-        <ul>
-          <li class="navitem"><a href="../index.html">ホーム</a></li>
-          <li class="navitem">
-            <a href="../Profile/Profile.html">プロフィール</a>
-          </li>
-          <li class="navitem">
-            <a href="../concert/concert.html">コンサート</a>
-          </li>
-          <li class="navitem"><a href="../lesson/lesson.html">レッスン</a></li>
-          <li class="navitem"><a href="sns.html">snsリンク</a></li>
-        </ul>
-      </nav>
-    </header>
+    <!-- headerにidを付与 -->
+    <header id="header"></header>
     <main>
-      <font size="6"><p class="mincho">sns ブログ</p></font>
-      <p class="mincho">
-        note　　<a href="https://note.com/rie_matsui"
-          >rie先生の楽典やり直し講座</a
-        >
-      </p>
-      <p class="mincho">
-        ameba　　<a href="https://ameblo.jp/musicarie"
-          >ピアニスト 松井理恵のブログ ♫ 板橋区役所前/松本市
-          ピアノ・ソルフェージュレッスン</a
-        >
-      </p>
-      <p class="mincho">
-        X(twitter)　　<a href="https://twitter.com/riematsui"
-          >松井理恵 @riematsui</a
-        >
-      </p>
-      <p class="mincho">
-        Instagram　　<a href="https://www.instagram.com/rie_matsui"
-          >松井理恵 @rie_matsui</a
-        >
-      </p>
-      <p class="mincho">
-        Threads　　<a href="https://www.threads.net/@rie_matsui"
-          >松井理恵 @rie_matsui</a
-        >
-      </p>
+      <div class="snsContainer">
+        <h1 class="mincho snsTitleFont">sns ブログ</h1>
+        <div class="snsDetailContainer">
+          <p class="mincho">
+            note　　<a href="https://note.com/rie_matsui" class="customLink"
+              >rie先生の楽典やり直し講座</a
+            >
+          </p>
+          <p class="mincho">
+            ameba　　<a class="customLink" href="https://ameblo.jp/musicarie"
+              >ピアニスト 松井理恵のブログ ♫ 板橋区役所前/松本市
+              ピアノ・ソルフェージュレッスン</a
+            >
+          </p>
+          <p class="mincho">
+            X(twitter)　　<a
+              class="customLink"
+              href="https://twitter.com/riematsui"
+              >松井理恵 @riematsui</a
+            >
+          </p>
+          <p class="mincho">
+            Instagram　　<a
+              class="customLink"
+              href="https://www.instagram.com/rie_matsui"
+              >松井理恵 @rie_matsui</a
+            >
+          </p>
+          <p class="mincho">
+            Threads　　<a
+              class="customLink"
+              href="https://www.threads.net/@rie_matsui"
+              >松井理恵 @rie_matsui</a
+            >
+          </p>
+        </div>
+      </div>
     </main>
+    <!-- ヘッダーを共通処理として呼び出す -->
+    <script>
+      $(function () {
+        $("#header").load("../common/header.html");
+      });
+    </script>
   </body>
 </html>
