ハンバーガーメニュー追加

--- a/common/header.html
+++ b/common/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="headerColor">
   <nav class="globalnav">
     <ul>
       <li class="navitem">
@@ -18,4 +18,31 @@
       </li>
     </ul>
   </nav>
+  <div id="nav-wrapper" class="nav-wrapper">
+    <div class="hamburger" id="js-hamburger">
+      <span class="hamburger__line hamburger__line--1"></span>
+      <span class="hamburger__line hamburger__line--2"></span>
+      <span class="hamburger__line hamburger__line--3"></span>
+    </div>
+    <nav class="sp-nav">
+      <ul>
+        <li class="spNaveItem">
+          <a href="../index.html">ホーム</a>
+        </li>
+        <li class="spNaveItem">
+          <a href="../Profile/Profile.html">プロフィール</a>
+        </li>
+        <li class="spNaveItem">
+          <a href="../concert/concert.html">コンサート</a>
+        </li>
+        <li class="spNaveItem">
+          <a href="../lesson/lesson.html">レッスン</a>
+        </li>
+        <li class="spNaveItem">
+          <a href="../sns/sns.html">snsリンク</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="black-bg" id="js-black-bg"></div>
+  </div>
 </header>
