--- a/lesson/lesson.html
+++ b/lesson/lesson.html
@@ -15,6 +15,8 @@
     />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- javaScriptファイルの読み込み -->
+    <script src="../js/main.js"></script>
   </head>
   <body>
     <!-- headerにidを付与 -->
@@ -107,12 +109,6 @@
           marginwidth="0"
           >読み込んでいます…</iframe
         >
-        <!-- ヘッダーを共通処理として呼び出す -->
-        <script>
-          $(function () {
-            $("#header").load("../common/header.html");
-          });
-        </script>
       </div>
     </main>
   </body>
