--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -15,6 +15,8 @@
     />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- javaScriptファイルの読み込み -->
+    <script src="../js/main.js"></script>
   </head>
   <body>
     <!-- headerにidを付与 -->
@@ -53,12 +55,6 @@
         </p>
       </div>
     </main>
-
-    <!-- ヘッダーを共通処理として呼び出す -->
-    <script>
-      $(function () {
-        $("#header").load("../common/header.html");
-      });
     </script>
   </body>
 </html>
