--- a/concert/concert.html
+++ b/concert/concert.html
@@ -15,6 +15,8 @@
     />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- javaScriptファイルの読み込み -->
+    <script src="../js/main.js"></script>
   </head>
   <body>
     <!-- headerにidを付与 -->
@@ -45,11 +47,5 @@
         height="834"
       />
     </main>
-    <!-- ヘッダーを共通処理として呼び出す -->
-    <script>
-      $(function () {
-        $("#header").load("../common/header.html");
-      });
-    </script>
   </body>
 </html>
