--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
     />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- javaScriptファイルの読み込み -->
+    <script src="js/main.js"></script>
   </head>
   <body>
     <!-- headerにidを付与 -->
     <header id="header"></header>
     <main>
       <div class="flex topConteiner flex column">
-        <div class="flex">
+        <div class="flex spColumn spCenter">
           <div class="topImageContainer">
             <img
               src="images/matsuiPlrayPiano.JPG"
               alt="松井理恵がピアノを弾いている様子の写真"
               width="412"
               height="275"
+              class="topImage"
             />
           </div>
           <div class="boldFontStyle mincho itemsBottom flex column">
@@ -48,10 +51,6 @@
       </div>
     </main>
     <!-- ヘッダーを共通処理として呼び出す -->
-    <script>
-      $(function () {
-        $("#header").load("common/header.html");
-      });
-    </script>
+    <script></script>
   </body>
 </html>
