--- a/sns/sns.html
+++ b/sns/sns.html
@@ -16,6 +16,8 @@
     />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- javaScriptファイルの読み込み -->
+    <script src="../js/main.js"></script>
   </head>
   <body>
     <!-- headerにidを付与 -->
@@ -59,11 +61,5 @@
         </div>
       </div>
     </main>
-    <!-- ヘッダーを共通処理として呼び出す -->
-    <script>
-      $(function () {
-        $("#header").load("../common/header.html");
-      });
-    </script>
   </body>
 </html>
