レスポンシブ対応完

--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -22,21 +22,22 @@
     <!-- headerにidを付与 -->
     <header id="header"></header>
     <main>
-      <div class="profileContainer">
-        <div class="flex">
+      <div class="profileContainer spCenter">
+        <div class="flex spColumn">
           <div class="profileImageContainer">
             <img
               src="../images/matsuiProfile.png"
               alt="松井理恵の全体写真"
               width="240px"
               height="320px"
+              class="profileImage"
             />
           </div>
           <div class="flex itemsCenter">
             <h1 class="mincho boldFontStyle">Profile</h1>
           </div>
         </div>
-        <div>
+        <div class="profileDetailContainer">
           <p class="mincho profileNameFont">松井理恵　Rie Matsui</p>
           <div class="profileDetailContainer">
             <p class="mincho profileDetailFont">
