--- a/concert/concert.html
+++ b/concert/concert.html
@@ -22,30 +22,35 @@
     <!-- headerにidを付与 -->
     <header id="header"></header>
     <main class="mincho">
-      <div class="concertXmasConcertContainer">
-        <h2 class="concertTitleFont concertLineHeight">
-          『レッスン生子どもたちによるクリスマス発表会』
-        </h2>
-        <p class="concertLineHeight">2023年12月3日（日）10:30開演</p>
-        <p class="concertLineHeight">マリーコンツェルト　入場無料要予約</p>
-      </div>
-      <div>
-        <h2 class="concertTitleFont concertLineHeight">『New Year Concert』</h2>
-        <p class="concertLineHeight">ソプラノ：谷明美　　ピアノ：松井理恵</p>
+      <div class="concertContainer">
+        <div class="concertXmasConcertContainer">
+          <h2 class="concertTitleFont concertLineHeight">
+            『レッスン生子どもたちによるクリスマス発表会』
+          </h2>
+          <p class="concertLineHeight">2023年12月3日（日）10:30開演</p>
+          <p class="concertLineHeight">マリーコンツェルト　入場無料要予約</p>
+        </div>
+        <div>
+          <h2 class="concertTitleFont concertLineHeight">
+            『New Year Concert』
+          </h2>
+          <p class="concertLineHeight">ソプラノ：谷明美　　ピアノ：松井理恵</p>
+          <p class="concertLineHeight">
+            2024年1月8日（月・祝）14:30開演　　ソフィアザールサロン（東京・駒込）
+          </p>
+        </div>
         <p class="concertLineHeight">
-          2024年1月8日（月・祝）14:30開演　　ソフィアザールサロン（東京・駒込）
+          ご予約・お問い合わせ　　03-3822-9677（ソフィアザール）　またはrie3.e.mail@gmail.com
+          （松井）
         </p>
+        <img
+          src="../images/NewYearConcert.jpeg"
+          alt="『レッスン生子どもたちによるクリスマス発表会』"
+          width="578"
+          height="834"
+          class="concertImage"
+        />
       </div>
-      <p class="concertLineHeight">
-        ご予約・お問い合わせ　　03-3822-9677（ソフィアザール）　またはrie3.e.mail@gmail.com
-        （松井）
-      </p>
-      <img
-        src="../images/NewYearConcert.jpeg"
-        alt="『レッスン生子どもたちによるクリスマス発表会』"
-        width="578"
-        height="834"
-      />
     </main>
   </body>
 </html>
