--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="boldFontStyle mincho itemsBottom flex column">
             <span class="textLeft">
-              <p class="topTitleRow">Rie Matsui</p>
+              <p class="topTitleRow topTitleRowSp">Rie Matsui</p>
               <p class="topTitleRow">Official website</p>
             </span>
           </div>
