--- a/sns/sns.html
+++ b/sns/sns.html
@@ -27,32 +27,40 @@
         <h1 class="mincho snsTitleFont">sns ブログ</h1>
         <div class="snsDetailContainer">
           <p class="mincho">
-            note　　<a href="https://note.com/rie_matsui" class="customLink"
+            note　　<br class="spBr" /><a
+              href="https://note.com/rie_matsui"
+              class="customLink"
               >rie先生の楽典やり直し講座</a
             >
           </p>
+          <br class="spBr" />
           <p class="mincho">
-            ameba　　<a class="customLink" href="https://ameblo.jp/musicarie"
+            ameba　　<br class="spBr" /><a
+              class="customLink"
+              href="https://ameblo.jp/musicarie"
               >ピアニスト 松井理恵のブログ ♫ 板橋区役所前/松本市
               ピアノ・ソルフェージュレッスン</a
             >
           </p>
+          <br class="spBr" />
           <p class="mincho">
-            X(twitter)　　<a
+            X(twitter)　　<br class="spBr" /><a
               class="customLink"
               href="https://twitter.com/riematsui"
               >松井理恵 @riematsui</a
             >
           </p>
+          <br class="spBr" />
           <p class="mincho">
-            Instagram　　<a
+            Instagram　　<br class="spBr" /><a
               class="customLink"
               href="https://www.instagram.com/rie_matsui"
               >松井理恵 @rie_matsui</a
             >
           </p>
+          <br class="spBr" />
           <p class="mincho">
-            Threads　　<a
+            Threads　　<br class="spBr" /><a
               class="customLink"
               href="https://www.threads.net/@rie_matsui"
               >松井理恵 @rie_matsui</a
