--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <title>Pianist　松井理恵 Official website | Profile</title>
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="profileDetailContainer">
-          <p class="mincho profileNameFont">松井理恵　Rie Matsui</p>
+          <h1 class="mincho profileNameFont">松井理恵　Rie Matsui</h1>
           <div class="profileDetailContainer">
             <p class="mincho profileDetailFont">
               ピアニスト。
