--- a/lesson/lesson.html
+++ b/lesson/lesson.html
@@ -42,9 +42,9 @@
         <div class="lessonPriceTextContainer">
           <h2 class="mincho lessonPriceFont">⭐︎レッスン料金</h2>
           <div>
-            <p class="mincho">
+            <h3 class="mincho">
               入会金なし、その都度予定を合わせて予約していただきます。
-            </p>
+            </h3>
             <p class="mincho">【1回レッスン、月3回レッスン、5回回数券】</p>
           </div>
         </div>
@@ -89,7 +89,7 @@
           </tbody>
         </table>
         <div class="mincho LessonMovieLessonContainer">
-          <p>【動画レッスン】</p>
+          <h2>【動画レッスン】</h2>
           <p>演奏動画を送っていただき、それに対して動画でお返事いたします。</p>
           <br />
           <p>演奏動画5分以内　3000円 演奏動画5分以上10分以内　4000円</p>
