--- a/index.html
+++ b/index.html
@@ -2,18 +2,51 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
+    <meta name="robots" content="index, follow" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pianist　松井理恵　Official website</title>
-    <link rel="stylesheet" href="css/style.css" />
     <meta
       name="description"
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
     />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="format-detection" content="telephone=no" />
     <meta
-      name="description"
+      name="keywords"
       content="ピアノ,ピアノレッスン,ピアノ教室,ソルフェージュ,ソルフェージュ教室,ソルフェージュレッスン,松井理恵,ピアニスト,楽典,音楽理論,オンラインレッスン,板橋区役所前,松本市,リトミック"
     />
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1"
+    />
+
+    <meta property="og:locale" content="ja_JP" />
+    <meta
+      property="og:site_name"
+      content="Pianist　松井理恵　Official website"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Pianist　松井理恵　Official website" />
+    <meta
+      property="og:description"
+      content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
+    />
+    <meta property="og:url" content="https://musicarie.com/" />
+    <meta property="og:image" content="./images/OGP.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:site" content="@riematsui" />
+    <meta
+      property="twitter:title"
+      content="Pianist　松井理恵　Official website"
+    />
+    <meta
+      property="twitter:description"
+      content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
+    />
+    <meta name="twitter:creator" content="@riematsui" />
+    <meta property="twitter:image" content="./images/OGP.jpg" />
+
+    <link rel="stylesheet" href="css/style.css" />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- javaScriptファイルの読み込み -->
