--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    //TODO:検索よけ。納品時外す
+    <meta name="robots" content="noindex" />
     <meta charset="utf-8" />
     <meta name="robots" content="index, follow" />
     <meta name="format-detection" content="telephone=no" />
