ファビコン設定

--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -47,7 +47,9 @@
     />
     <meta name="twitter:creator" content="@riematsui" />
     <meta property="twitter:image" content="../images/OGP.jpg" />
-
+    
+    <link rel="icon" href="../images/favicon.svg" id="favicon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon.svg" />
     <link rel="stylesheet" href="../css/style.css" />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
