--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
     />
     <meta property="og:url" content="https://musicarie.com/" />
-    <meta property="og:image" content="./images/OGP.jpg" />
+    <meta property="og:image" content="images/OGP.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:site" content="@riematsui" />
@@ -46,8 +46,10 @@
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
     />
     <meta name="twitter:creator" content="@riematsui" />
-    <meta property="twitter:image" content="./images/OGP.jpg" />
+    <meta property="twitter:image" content="images/OGP.jpg" />
 
+    <link rel="icon" href="images/favicon.svg" id="favicon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.svg" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- jqueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
