--- a/lesson/lesson.html
+++ b/lesson/lesson.html
@@ -1,8 +1,14 @@
+<!-- 
+  やること
+  ・OGP部分を絶対パスに変更
+  ・googleコンソールのタグ入れ
+  ・googleアナリティクスのタグ入れ
+  ・いらないコメントの削除
+  がんばれ！
+ -->
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <!-- TODO:検索よけ。納品時外す -->
-    <meta name="robots" content="noindex" />
     <meta charset="utf-8" />
     <meta name="robots" content="index, follow" />
     <meta name="format-detection" content="telephone=no" />
@@ -33,6 +39,7 @@
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
     />
     <meta property="og:url" content="https://musicarie.com/" />
+    <!-- 画像をサーバーにアップロードし絶対パスに変更 -->
     <meta property="og:image" content="../images/OGP.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -46,6 +53,7 @@
       content="ピアニスト。演奏活動をしながら、板橋区と松本市でピアノソルフェージュ・音楽理論等のレッスンをしています。子ども～大人、初心者～専門的に勉強している人まで対応。オンラインレッスン可。"
     />
     <meta name="twitter:creator" content="@riematsui" />
+    <!-- 画像をサーバーにアップロードし絶対パスに変更 -->
     <meta property="twitter:image" content="../images/OGP.jpg" />
 
     <link rel="icon" href="../images/favicon.svg" id="favicon" />
